--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,32 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
+    <!-- Google Fonts CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Custom CSS Stylesheet -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/genshin-styles.css">
 </head>
 <body>
 
-    <!-- Display current date -->
-    <h1> <%= currentDate %> </h1>
+    <!-- To-do List Menu -->
+    <section>
+        <div class="container-fluid bg-ganyu-pastel-blue pt-5">
+            <div class="row text-center">
+                <div class="col-lg-12">
 
-    <!-- Menu to add items -->
-    <h1>Add new item</h1>
-    <form action="/updatedList " method="POST">
-        <input type="text" name="listItem" placeholder="New Item"  required>
-        <input type="submit">
-    </form>
+                    <!-- Regular Look -->
+                    <h1 class="menu-title text-ganyu-light-red"> <%= currentDate %> </h1>
 
-    <!-- Display list of current items -->
-    <ul>
-        <% if( locals.toDoList ){ %>
-            <% for(let i =0; i < toDoList.length; i++){ %>
-                <li> <%= toDoList[i] %></li>
-            <% } %>
-        <% }else{ %>
-            <li>No items at the moment</li>
-        <% } %>    
-    </ul>
+                    <!-- Rounded border -->
+                    <!-- <h1><span class="badge badge-pill bg-ganyu-light-red text-white"> <%= currentDate %></span></h1> -->
+
+                    <!-- Square border -->
+                    <!-- <button type="button" class="btn bg-ganyu-light-red">
+                        <h1 class="text-white"> <%= currentDate %> </h1>
+                    </button> -->
+
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <!-- Menu to add items -->
+                    <h2 class="menu-title text-ganyu-dark-blue">Add New Item</h2>
+                    <form action="/updatedList " method="POST">
+                        <!-- <input type="text" name="listItem" placeholder="New Item"  required>
+                        <input type="submit"> -->
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text bg-ganyu-light-yellow">
+                                    <input class="add-item-btn bg-ganyu-light-yellow" type="submit">
+                                </div>
+                            </div>
+                            <input type="text" class="form-control" name="listItem" placeholder="New Item"  required aria-label="Text input with checkbox">
+                        </div>
+
+                    </form>
+                    <img src="images/ganyu-chibi-1.png" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <!-- Display list of current items -->
+                    <h2 class="menu-title text-ganyu-dark-blue">To-do List</h2>
+                        <% if( locals.toDoList ){ %>
+                            <% for(let i =0; i < toDoList.length; i++){ %>
+                                <!-- <input type="checkbox" name="">
+                                <label for=""><%= toDoList[i] %></label>
+                                <br> -->
+
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text bg-ganyu-light-yellow">
+                                            <input type="checkbox" aria-label="Checkbox for following text input">
+                                        </div>
+                                    </div>
+                                    <!-- <input type="text" class="form-control" aria-label="Text input with checkbox"> -->
+                                    <label for="" class="form-control"><%= toDoList[i] %></label>
+                                </div>
+
+
+                                <!-- <li> <%= toDoList[i] %></li> -->
+                            <% } %>
+                        <% }else{ %>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text bg-ganyu-light-yellow">
+                                        <input type="checkbox" aria-label="Checkbox for following text input">
+                                    </div>
+                                </div>
+                                <!-- <input type="text" class="form-control" aria-label="Text input with checkbox"> -->
+                                <label for="" class="form-control">No items at the moment</label>
+                            </div>
+                        <% } %>    
+                </div>
+            </div>
+        </div>
+
+    </section>
+   
 
 </body>
+
+
 <footer>
-    <p>&copy; Copyright <%= new Date().getFullYear() %> GiordanAndrew</p>
+    <div class="container-fluid bg-ganyu-dark-blue">
+        <div class="row pt-3">
+            <div class="col-lg-12 text-center">
+                <p class="text-white">&copy; Copyright <%= new Date().getFullYear() %> GiordanAndrew</p>
+            </div>
+        </div>
+    </div>
+    <!-- <p>&copy; Copyright <%= new Date().getFullYear() %> GiordanAndrew</p> -->
 </footer>
 </html>
