--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,14 +1,53 @@
 body{
-    font-family: 'Lora', serif;
+    font-family: 'Montserrat', sans-serif;
     padding: 0;
     margin: 0;;
 }
 
-.menu-title{
+.date-header{
+    margin: 2rem auto;
+    text-align: center;
+    max-width: max-content;
+    border: 2px solid red;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+}
+
+.menu-header{
     margin: 2rem auto;
     text-align: center;
 }
 
 .add-item-btn{
     border: 0;
+}
+
+.character-quote{
+    font-size: 2.5rem;
+    font-family: 'Caveat', cursive;
+    text-align: center;
+}
+
+.chibi-character{
+    width: 10rem;
+}
+
+/*************************************************************************************************/
+/*                                  Pseudo Class Selectors                                       */
+/*************************************************************************************************/
+
+::-webkit-scrollbar {
+    background-color: #596cd5;
+    width: 14px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d9eeff;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
