--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <!-- Google Fonts CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Lora:wght@400;500;700&family=Montserrat:wght@300;400;500;700;900&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -16,17 +16,32 @@
     <!-- Custom CSS Stylesheet -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/genshin-styles.css">
+    <link rel="stylesheet" href="/css/ga-style.css">
 </head>
 <body>
 
     <!-- To-do List Menu -->
     <section>
         <div class="container-fluid bg-ganyu-pastel-blue pt-5">
+            <div class="row">
+                <div class="col-lg-6">
+                      <!-- Other Menu -->
+                    <!-- <div class="menu-container">
+                        <h2 class="menu-header text-ganyu-dark-blue d-inline">Change Theme</h2>
+                    </div> -->
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn bg-ganyu-light-blue text-white">Ganyu</button>
+                        <button type="button" class="btn bg-wanderer-grey-blue-1 text-white">Wanderer</button>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <p class="character-quote">"We're way behind schedule..."</p>
+                </div>
+            </div>
             <div class="row text-center">
                 <div class="col-lg-12">
-
                     <!-- Regular Look -->
-                    <h1 class="menu-title text-ganyu-light-red"> <%= currentDate %> </h1>
+                    <h1 class="date-header text-white bg-ganyu-light-red "> <%= currentDate %> </h1>
 
                     <!-- Rounded border -->
                     <!-- <h1><span class="badge badge-pill bg-ganyu-light-red text-white"> <%= currentDate %></span></h1> -->
@@ -35,18 +50,16 @@
                     <!-- <button type="button" class="btn bg-ganyu-light-red">
                         <h1 class="text-white"> <%= currentDate %> </h1>
                     </button> -->
-
-
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
                     <!-- Menu to add items -->
-                    <h2 class="menu-title text-ganyu-dark-blue">Add New Item</h2>
+                    <div class="menu-container">
+                        <h2 class="menu-header text-ganyu-dark-blue">Add New Item</h2>
+                    </div>
+                    
                     <form action="/updatedList " method="POST">
-                        <!-- <input type="text" name="listItem" placeholder="New Item"  required>
-                        <input type="submit"> -->
-
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <div class="input-group-text bg-ganyu-light-yellow">
@@ -55,13 +68,23 @@
                             </div>
                             <input type="text" class="form-control" name="listItem" placeholder="New Item"  required aria-label="Text input with checkbox">
                         </div>
-
                     </form>
-                    <img src="images/ganyu-chibi-1.png" alt="">
+
+                    <!-- Clear list -->
+                    <div class="menu-container">
+                        <h2 class="menu-header text-ganyu-dark-blue">Clear List</h2>
+                    </div>
+                    <button type="button" class="btn bg-ganyu-light-yellow btn-lg">Clear List</button>
+                    
+
+                    <!-- Genshin Chibi Art -->
+                    <div class="genshin-art-box">
+                        <img class="chibi-character" src="images/ganyu-chibi-1.png" alt="">
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <!-- Display list of current items -->
-                    <h2 class="menu-title text-ganyu-dark-blue">To-do List</h2>
+                    <h2 class="menu-header text-ganyu-dark-blue">To-do List</h2>
                         <% if( locals.toDoList ){ %>
                             <% for(let i =0; i < toDoList.length; i++){ %>
                                 <!-- <input type="checkbox" name="">
