--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,20 +2,30 @@ body{
     font-family: 'Montserrat', sans-serif;
     padding: 0;
     margin: 0;;
+    cursor: url('../images/ganyu-chibi-1.png'), url('../images/ganyu-chibi-1.png'), auto;
+}
+
+.container-fluid{
+    padding: 0 5rem;
 }
 
 .date-header{
-    margin: 2rem auto;
+    margin: 4rem auto 5rem;
     text-align: center;
     max-width: max-content;
     border: 2px solid red;
-    border-radius: 5px;
-    padding: 0.5rem 1rem;
-}
+    border-radius: 20px;
+    padding: 0.6rem 1rem;
+}   
 
 .menu-header{
+    display: inline-block;
     margin: 2rem auto;
     text-align: center;
+    border: 2px solid;
+    border-radius: 20px;
+    max-width: max-content;
+    padding: 0.6rem 1rem;
 }
 
 .add-item-btn{
@@ -23,21 +33,22 @@ body{
 }
 
 .character-quote{
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-family: 'Caveat', cursive;
-    text-align: center;
+    text-align: right;
 }
 
 .chibi-character{
-    width: 10rem;
+    width: 5.5rem;
 }
+
 
 /*************************************************************************************************/
 /*                                  Pseudo Class Selectors                                       */
 /*************************************************************************************************/
 
 ::-webkit-scrollbar {
-    background-color: #596cd5;
+    background-color: #feecc5;
     width: 14px;
 }
 
@@ -47,7 +58,7 @@ body{
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #d9eeff;
+    background-color: #e65965;
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
