Added some functionality to my character theme buttons. Incomplete, but made good progress. Need to clean documentation of code eventually.

--- a/public/css/genshin-styles.css
+++ b/public/css/genshin-styles.css
@@ -57,7 +57,7 @@
 }
 
 /* Background Colors */
-.bgg-wanderer-pastel-blue{
+.bg-wanderer-pastel-blue{
     background-color: #c3c1f9;
 }
 .bg-wanderer-grey-blue-1{
