--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,40 +22,25 @@
 
     <!-- To-do List Menu -->
     <section>
-        <div class="container-fluid bg-ganyu-pastel-blue py-5">
+        <div class="container-fluid main-container bg-ganyu-pastel-blue py-5">
             <div class="row">
                 <div class="col-lg-6">
                       <!-- Other Menu -->
-                    <!-- <div class="menu-container">
-                        <h2 class="menu-header bg-ganyu-dark-blue text-white d-inline">Change Theme</h2>
-                    </div> -->
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn ganyu-theme-btn bg-ganyu-light-blue text-white">Ganyu</button>
-                        <button type="button" class="btn wanderer-theme-btn bg-wanderer-grey-blue-1 text-white">Wanderer</button>
+                        <button onclick="ganyuTheme()" type="button" class="btn bg-ganyu-light-blue text-white">Ganyu</button>
+                        <button onclick="wandererTheme()" type="button" class="btn bg-wanderer-grey-blue-1 text-white">Wanderer</button>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <p class="character-quote text-ganyu-dark-blue">"We're way behind schedule..."
                         <img class="chibi-character" src="images/ganyu-chibi-4.png" alt="">
                     </p>
-                    
-                    <!-- <div class="genshin-art-box">
-                        <img class="chibi-character" src="images/ganyu-chibi-1.png" alt="">
-                    </div> -->
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-lg-12">
                     <!-- Regular Look -->
                     <h1 class="date-header text-white bg-ganyu-light-red "> <%= currentDate %> </h1>
-
-                    <!-- Rounded border -->
-                    <!-- <h1><span class="badge badge-pill bg-ganyu-light-red text-white"> <%= currentDate %></span></h1> -->
-
-                    <!-- Square border -->
-                    <!-- <button type="button" class="btn bg-ganyu-light-red">
-                        <h1 class="text-white"> <%= currentDate %> </h1>
-                    </button> -->
                 </div>
             </div>
             <div class="row">
@@ -79,11 +64,6 @@
 
                     <!-- Clear list -->
                     <button type="button" class="btn bg-ganyu-light-yellow">Clear List</button>
-                
-                    <!-- Genshin Chibi Art -->
-                    <!-- <div class="genshin-art-box">
-                        <img class="chibi-character" src="images/ganyu-chibi-1.png" alt="">
-                    </div> -->
                 </div>
                 <div class="col-lg-7">
                     <!-- Display list of current items -->
@@ -122,7 +102,7 @@
 
     </section>
     
-    <script src="/scripts/index.js" ></script>
+    <script src="/scripts/index.js" charset="UTF-8"></script>
 
 </body>
 
