--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,39 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do List</title>
-    <!-- Google Fonts CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Lora:wght@400;500;700&family=Montserrat:wght@300;400;500;700;900&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- Custom CSS Stylesheet -->
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/genshin-styles.css">
-    <link rel="stylesheet" href="/css/ga-style.css">
-</head>
-<body class="bg-ganyu-dark-blue">
+<%- include("partials/header.ejs") %>
+
+<body class="">
 
     <!-- To-do List Menu -->
     <section>
-        <div class="container-fluid main-container bg-ganyu-pastel-blue py-5">
+        <div class="container-fluid main-container py-5">
             <div class="row">
-                <div class="col-lg-3">
+            <div class="col-lg-3">
                       <!-- Other Menu -->
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button onclick="ganyuTheme()" type="button" class="btn bg-ganyu-light-blue text-white">Ganyu</button>
-                        <button onclick="wandererTheme()" type="button" class="btn bg-wanderer-grey-blue-1 text-white">Wanderer</button>
+                        <button onclick="wandererTheme()" type="button" class="btn bg-wanderer-teal text-white">Wanderer</button>
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-4">
                     <div class="character-quote-container">
-                        <p class="character-quote text-ganyu-dark-blue">
+                        <p class="character-quote">
                             "We're way behind schedule..."
                         </p>
                         <img class="chibi-character" src="images/ganyu-chibi-4.png" alt="">
@@ -50,18 +32,14 @@
                 <div class="col-lg-5">
                     <!-- Menu to add items -->
                     <div class="menu-container text-center">
-                        <h2 class="menu-header bg-ganyu-dark-blue text-white">Options</h2>
+                        <h2 class="menu-header text-white">Options</h2>
                         <img class="chibi-character" src="images/ganyu-chibi-3.png" alt="">
                     </div>
                     
                     <form action="/updatedList " method="POST">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <!-- <div class="input-group-text bg-ganyu-light-yellow"> -->
-                                    <!-- <input class="add-item-btn bg-ganyu-light-yellow" type="submit" value="Add"> -->
-                                <!-- </div> -->
-                                <input class="btn input-group-text bg-ganyu-light-yellow text-black" type="submit" name="" id="" value="Add">
-                                <!-- <button type="button" class="btn bg-ganyu-light-yellow">Add</button> -->
+                                <input class="btn input-group-text text-black" type="submit" name="" id="" value="Add">
                             </div>
                             <input type="text" class="form-control" name="listItem" placeholder="New Item"  required aria-label="Text input with checkbox">
                         </div>
@@ -69,14 +47,14 @@
 
                     <!-- Clear list -->
                     <form action="/clearList" method="POST">
-                        <button class="btn bg-ganyu-light-yellow text-black" type="submit">Clear List</button>
+                        <button class="btn text-black input-group-text" type="submit">Clear List</button>
                     </form>
                    
                 </div>
                 <div class="col-lg-7">
                     <!-- Display list of current items -->
                     <div class="menu-container text-center">
-                        <h2 class="menu-header bg-ganyu-dark-blue text-white">To-do List</h2>
+                        <h2 class="menu-header text-white">To-do List</h2>
                         <img class="chibi-character" src="images/ganyu-chibi-5.png" alt="">
                     </div>
                     
@@ -84,7 +62,7 @@
                             <% for(let i =0; i < toDoList.length; i++){ %>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <div class="input-group-text bg-ganyu-light-yellow">
+                                        <div class="input-group-text ">
                                             <input type="checkbox" aria-label="Checkbox for following text input">
                                         </div>
                                     </div>
@@ -109,19 +87,8 @@
         </div>
 
     </section>
-    
-    <script src="/scripts/index.js" charset="UTF-8"></script>
-
 </body>
 
+<%- include("partials/footer.ejs") %>
 
-<footer>
-    <div class="container-fluid bg-ganyu-dark-blue">
-        <div class="row pt-3">
-            <div class="col-lg-12 text-center">
-                <p class="text-white">&copy; Copyright <%= new Date().getFullYear() %> GiordanAndrew</p>
-            </div>
-        </div>
-    </div>
-</footer>
-</html>
+
