--- a/public/css/ga-style.css
+++ b/public/css/ga-style.css
@@ -186,3 +186,27 @@
 .white-shadow-3d{
   text-shadow: 3px 3px 0 #6c5070;
 }
+
+/* Zooms */
+.zoom {
+  transition: transform .2s; /* Animation */
+  /* margin: 0 auto; */
+}
+
+.zoom:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.big-zoom {
+  transition: transform .2s; /* Animation */
+  margin: 0 auto;
+}
+
+.big-zoom:hover {
+  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+/* Size Up */
+.bigger{
+  transform: scale(1.1);
+}
