--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,26 @@
 body{
-    font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;;
+    background-color: var(--color-primary);
     cursor: url('../images/ganyu-chibi-1.png'), url('/images/ganyu-chibi-1.png'), auto;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+footer{
+    background-color: var(--color-secondary);
+    padding: 0.25rem 0;
 }
 
 .container-fluid{
     padding: 0 5rem;
+}
+
+.main-container{
+    background-color: var(--color-primary);
+}
+
+.menu-container{
+    margin: auto;
 }
 
 .character-quote-container{
@@ -14,23 +28,49 @@ body{
     text-align: right;
 }   
 
+.character-quote{
+   color: var(--color-accent);
+   font-weight: 800;
+}   
+
 .date-header{
-    margin: 4rem auto 5rem;
-    text-align: center;
-    max-width: max-content;
-    border: 2px solid red;
+    background-color: var(--color-accent);
+    border: 2px solid white;
     border-radius: 20px;
+    margin: 4rem auto 5rem;
+    max-width: max-content;
     padding: 0.6rem 1rem;
+    text-align: center;
 }   
 
 .menu-header{
-    display: inline-block;
-    margin: 2rem auto;
-    text-align: center;
+    background-color: var(--color-secondary);
     border: 2px solid;
     border-radius: 20px;
+    display: inline-block;
+    margin: 2rem auto;
     max-width: max-content;
     padding: 0.6rem 1rem;
+    text-align: center;
+}
+
+.input-group-text{
+    background-color: var(--color-accent-2);
+    color: var(--text-color);
+}
+
+.theme-btn{
+    border: 2px solid white;
+}
+
+.ganyu-btn{
+    background-color: #7B8DD5;
+    border-radius: 20px 0 0 20px !important;
+}
+
+.wanderer-btn{
+    background-color: #3C5EB8;
+    border-radius: 0 20px 20px 0 !important;
 }
 
 .add-item-btn{
@@ -39,14 +79,24 @@ body{
 
 .delete-btn, .done-btn{
     opacity: 0.5;
+    transition: 300ms;
 }
 
 button.delete-btn:hover, button.done-btn:hover{
     opacity: 1;
 }
 
-.edit-btn{
+.delete-btn, .edit-btn, .done-btn{
+    color: var(--text-color);
+    border-radius: 20px;
+}
 
+.add-item-btn{
+    border-radius: 20px 0 0 20px !important;
+}
+
+.clear-list-btn{
+    border-radius: 20px !important;
 }
 
 .done-btn, .edit-input{
@@ -54,10 +104,6 @@ button.delete-btn:hover, button.done-btn:hover{
 }
 
 .form-btn{
-    /* background-color: DodgerBlue; Blue background */
-    /* border: none; Remove borders */
-    /* color: white; White text */
-    /* padding: 12px; Some padding */
     font-size: 16px; /* Set a font size */
     cursor: pointer; /* Mouse pointer on hover */
 }
@@ -66,6 +112,11 @@ button.delete-btn:hover, button.done-btn:hover{
 .btn{
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
+}
+
+.form-control{
+    border-radius: 0 20px 20px 0;
+    /* margin: 0 0 0 6px; */
 }
 
 .character-quote{
@@ -86,7 +137,7 @@ button.delete-btn:hover, button.done-btn:hover{
 /*************************************************************************************************/
 
 ::-webkit-scrollbar {
-    background-color: #feecc5;
+    background-color: var(--color-accent-2);
     width: 14px;
 }
 
@@ -96,7 +147,7 @@ button.delete-btn:hover, button.done-btn:hover{
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #e65965;
+    background-color: var(--color-secondary);
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
